schema/testdata/errors/expression_literal_string_in_literal_array.keel
model Post {
    @permission(
        //expect-error:27:29:AttributeExpressionError:cannot use operator 'in' with types Text and Number[]
        expression: "bob" in [1, 2],
        actions: [get]
    )
}
